@@ -1,3 +1,3 @@
 packages export-ignore
-data/spacefm-manual-en.src export-ignore
+data/spacefm-mansrc-en.html export-ignore
 .gitattributes export-ignore
