@@ -155,9 +155,9 @@
 <!-- @Introduction @Highlights -->
 <a name="introduction-about"></a> <!-- backwards compat -->
 
-<p>SpaceFM is a multi-panel tabbed file manager for Linux which is lightweight and has minimal dependencies, yet is very capable, flexible, and extensible.
+<p>SpaceFM is a multi-panel tabbed file and desktop manager for Linux with built-in VFS, udev- or HAL-based device manager, customizable menu system, and bash integration.
 
-<p>Now used as the default file manager in the <a href="http://partedmagic.com/">Parted Magic</a> live rescue OS and other distros, SpaceFM is gaining popularity among novice and power users alike for its exceptional stability, speed, convenience and flexibility.
+<p>Now used as the default file manager in the <a href="http://partedmagic.com/">Parted Magic</a> live rescue OS and <a href="https://github.com/IgnorantGuru/spacefm/wiki/Distros">other distros</a>, SpaceFM is gaining popularity among novice and power users alike for its stability, speed, convenience and flexibility.
 
 <ul>
     <li><b>Flexible</b> - <i>Can appear very simple or very complex depending on configuration</i><br>
@@ -5618,12 +5618,12 @@ queue_state                     run|pause|queue|stop
 <a href="#sockets-events-winnew">evt_win_new</a>                     Window new            %e %w %p %t
 <a href="#sockets-events-winfoc">evt_win_focus</a>                   Window focus          %e %w %p %t
 <a href="#sockets-events-winmov">evt_win_move</a>                    Window move/resize    %e %w %p %t
-<a href="#sockets-events-winclk">evt_win_click</a>                       Mouse click           %e %w %p %t %b %m %f
+<a href="#sockets-events-winclk">evt_win_click</a>                   Mouse click           %e %w %p %t %b %m %f
 <a href="#sockets-events-winkey">evt_win_key</a>                     Window keypress       %e %w %p %t %k %m
 <a href="#sockets-events-wincls">evt_win_close</a>                   Window close          %e %w %p %t
 <a href="#sockets-events-pnlfoc">evt_pnl_focus</a>                   Panel focus           %e %w %p %t
 <a href="#sockets-events-pnlshw">evt_pnl_show</a>                    Panel show/hide       %e %w %p %t %f %v
-<a href="#sockets-events-pnlsel">evt_pnl_sel</a>                         Selection changed     %e %w %p %t
+<a href="#sockets-events-pnlsel">evt_pnl_sel</a>                     Selection changed     %e %w %p %t
 <a href="#sockets-events-tabnew">evt_tab_new</a>                     Tab new               %e %w %p %t
 <a href="#sockets-events-tabfoc">evt_tab_focus</a>                   Tab focus             %e %w %p %t
 <a href="#sockets-events-tabcls">evt_tab_close</a>                   Tab close             %e %w %p %t
@@ -6508,7 +6508,7 @@ Additional MIME types provided by libmimetype, adding globs for some missing but
 
 <p>DISCLAIMER:  While the authors, copyright holders, and maintainers of this software endeavour to keep all content up to date and valuable, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the software or the information, communications, products, services, or related graphics for any purpose. Any reliance you place on such content is therefore strictly AT YOUR OWN RISK.<br>
 <br>
-<p>Updated 2013-02-01&nbsp;&nbsp;(SpaceFM version 0.8.5+)
+<p>Updated 2013-02-02&nbsp;&nbsp;(SpaceFM version 0.8.5+)
 <br><br>
 </center>
 </td></tr></table>
